# norm

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  sandbox.py
norm_the_orm/: __init__.py  exceptions.py  models.py  search.py  session.py  utils.py
norm_the_orm/core/: entity.py  registry.py
norm_the_orm/models/: __init__.py  asset.py  project.py  published_file.py  shot.py  step.py  tag.py  task.py  timelog.py  user.py  version.py
src/norm/: __init__.py  flow.py  models.py  search.py  session.py
tests/: conftest.py  mock_data.py  mock_shotgrid.py  test_entity.py  test_models.py  test_session.py  test_session_old.py  test_time_logs.py
