[project]
name = "norm-the-orm"
version = "0.1.0"
description = "An ORM for Shotgrid"
authors = [
    {name = "mswed",email = "mswed@beapot.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<=3.11"
dependencies = [
    "shotgrid-flow (>=0.1.0,<0.2.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
